revise footer information

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <a href="http://github.com/muan/scribble" class="muted">built with Jekyll using Scribble theme</a>
+  &copy; 2014 by <a href="mailto:qyou.casia@gmail.com" class="muted">qyou</a>.&nbsp; All rights reserved!&nbsp; This website is <a href="http://github.com/muan/scribble" class="muted">built with Jekyll using Scribble theme</a>
   <br />
   <br />
   <img src="/images/scribble2.png" alt="scribble" /> 
